typescript/checker/tests/conformance/interfaces/interfaceDeclarations/interfaceWithCallSignaturesThatHidesBaseSignature2.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            132,
        ),
        hi: BytePos(
            133,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/interfaces/interfaceDeclarations/interfaceWithCallSignaturesThatHidesBaseSignature2.ts:9:5
  |
9 | var d: Derived;
  |     ^

